# curriculum

./: .gitignore
AI-Agents-with-MongoDB/01-Building-AI-Agents-with-MongoDB/: README.md  data.py  key_param.py  main.py  pyproject.toml
AI-Agents-with-MongoDB/01-Building-AI-Agents-with-MongoDB/lessons/02-set-up-the-environment/: data.py  test_connections.ipynb
AI-Agents-with-MongoDB/01-Building-AI-Agents-with-MongoDB/lessons/03-create-tools-for-your-agent/: L3.py
AI-Agents-with-MongoDB/01-Building-AI-Agents-with-MongoDB/lessons/04-give-the-llm-access-to-tools/: L4.py
AI-Agents-with-MongoDB/01-Building-AI-Agents-with-MongoDB/lessons/05-build-the-agents-decision-making-capabilities/: L5.py
AI-Agents-with-MongoDB/01-Building-AI-Agents-with-MongoDB/lessons/06-add-memory-to-the-agent/: L6.py
